# utdcs

./: .gitignore  README.md  pyproject.toml  requirements.txt  utdcs-db
processing/: models.py  urls.py  views.py
processing/static/css/: styles.css
processing/templates/processing/: base.html  index.html  login.html  newpost.html  post.html  update.html
processing/templatetags/: tagcheck.py
restoration/: restore.py  save.sh
website/: settings.py  urls.py
